CMP - Option Edit View: Hide validation symbol to prevent overlapping with checkbox control on the right

--- a/src/component/view/option-edit/style.scss
+++ b/src/component/view/option-edit/style.scss
@@ -3,9 +3,16 @@
     grid-template-columns: 220px auto;
     height: calc(100% - 60px);
 
-    .text-ipt input {
-        padding-right: 70px;
-        background-color: transparent;
+    .text-ipt {
+        input {
+            padding-right: 70px;
+            background-color: transparent;
+        }
+
+        // Override and Hide the Validation Tick/Cross
+        .icon::before {
+            display: none;
+        }
     }
 
     &__form {
